Writing tests and fixing problem with PreparedStatement not closed maybe fixing the bug #1635